# StudentsDB

./: CMakeLists.txt  LICENSE  client.cpp  generator.cpp  justParser.cpp  readme.md  server.cpp
Modules/: CMakeLists.txt
Modules/DB/: CMakeLists.txt  DB.cpp  DB.h  Generator.cpp  Generator.h  Student.h
Modules/Parser/: AST.h  CMakeLists.txt  interpreter.cpp  interpreter.h  parser.y  scanner.h  scanner.l
Modules/Server/: CMakeLists.txt  newServer.cpp  newServer.hpp
